# logger

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
docs/: Logger.puml
source/: main.cpp
source/Logger/: Logger.cpp  Logger.h  LoggerType.cpp  LoggerType.h  LoggerTypeFile.cpp  LoggerTypeFile.h  LoggerTypeStdio.cpp  LoggerTypeStdio.h  LoggerTypeSyslog.cpp  LoggerTypeSyslog.h
source/logger/: file_logger.cpp  file_logger.h  logger.cpp  logger.h  logger_type.cpp  logger_type.h  logger_type_file.cpp  logger_type_file.h  logger_type_stdio.cpp  logger_type_stdio.h  logger_type_syslog.cpp  logger_type_syslog.h  stdio_logger.cpp  stdio_logger.h  syslog_logger.cpp  syslog_logger.h
